--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dependencies:
   flutter_native_image: ^0.0.6+1
   auto_size_text_field: ^2.2.1
   flutter_launcher_icons: ^0.13.1
+  connectivity_plus: ^4.0.1
+  get_storage: ^2.1.1
+  fuzzywuzzy: ^1.1.2
+  video_player: ^2.7.0
+  flutter_secure_storage: ^8.0.0
   
 flutter_icons:
   android: true
