--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,12 @@ dependencies:
   video_player: ^2.7.0
   flutter_secure_storage: ^8.0.0
   flutter_chat_bubble: ^2.0.2
+  flutter_riverpod: ^1.0.4
+  hive_flutter: ^1.1.0
+  flutter_swipe_detector: ^2.0.0
+  file: ^6.1.4
+  uuid: ^3.0.6
+  json_annotation: ^4.5.0
   
 flutter_icons:
   android: true
