--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   file: ^6.1.4
   uuid: ^3.0.6
   json_annotation: ^4.5.0
+  flip_card: ^0.7.0
   
 flutter_icons:
   android: true
@@ -103,6 +104,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/animalspics/
 
   fonts:
     - family: Montserrat
