--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ dependencies:
   uuid: ^3.0.6
   json_annotation: ^4.5.0
   flip_card: ^0.7.0
+  flutter_local_notifications: ^16.2.0
+  rxdart: ^0.27.7
+  timezone: ^0.9.2
+  flutter_native_timezone: ^2.0.0
+  path_provider: ^2.1.1
+  http: ^0.13.6
   
 flutter_icons:
   android: true
