--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   path_provider: ^2.1.1
   http: ^0.13.6
+  firebase_admin: ^0.2.0
   
 flutter_icons:
   android: true
